--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,6 @@
     body {
         font-family: Arial, sans-serif;
-        background-color: #f0f2f5;
+        background-color: white;
         margin: 0;
         padding: 0;
         display: flex;
@@ -11,6 +11,12 @@
 
     .container {
         justify-content: center;
+        border-radius: 10px;
+        height: 70%;
+    }
+    
+    h2 {
+        text-align: center;
     }
 
     table {
@@ -19,4 +25,14 @@
 
     .table .tbody .tr {
         border-bottom: 1px solid black;
+    }
+
+    a {
+        text-decoration: none;
+        color: black;
+    }
+
+    a:hover {
+        font-size: large;
+        color: red;
     }
